agregando build y push

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,14 +19,21 @@ jobs:
       with:
         fetch-depth: 0 #para que vaya bien adentro en la busqueda de nuestro historial de commits
 
+        #el siguiente paso es loggearse a Docker hub
     - name: Docker login
       env:
-        DOCKER_USER: ${{ secrets.DOCKER_USER }} #son los env variables que estan en secrets > actions
+        DOCKER_USER: ${{ secrets.DOCKER_USER }} #son los env variables que estan en el repositorio > settings > secrets and variables > actions
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: | #que es lo que quiero correr. El | es para que cada linea sea independiente y se ejecuten una tras otra.
         echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Fin del login"
-
+    - name: Build Docker Image
+      run: |
+        docker build -t allanvillatorof/docker-graphql:0.0.2 .
+    - name: Push Docker Image
+      run: |
+        docker push allanvillatorof/docker-graphql:0.0.2 .
+        
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
