--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,8 @@ jobs:
         docker build -t allanvillatorof/docker-graphql:0.0.2 .
     - name: Push Docker Image
       run: |
-        docker push allanvillatorof/docker-graphql:0.0.2 .
-        
+        docker push allanvillatorof/docker-graphql:0.0.2
+
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        # si no se escribe --file Dockerfile se adume que es Dockerfile por defecto
