--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,10 +32,11 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t allanvillatorof/docker-graphql:0.0.2 .
-        
+
     - name: Push Docker Image
       run: |
         docker push allanvillatorof/docker-graphql:0.0.2
+        docker push allanvillatorof/docker-graphql:latest
 
     # - name: Build the Docker image
     #   run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
