--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t allanvillatorof/docker-graphql:0.0.2 .
-        docker push allanvillatorof/docker-graphql:latest .
+        docker build -t allanvillatorof/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
